# fast-qaoa-c

./: .gitignore  LICENSE  Makefile  README.md  build.py  compile_flags.txt  cpu.txt  experiment.toml  glossary.txt  intel.sh  pyproject.toml  test.py
data/: IntegerKnapsack.feather  IntegerKnapsackPisinger.feather  Knapsack.feather  qpe_shift.feather
experiments/: eval_int_main_qpe.toml  experiment.toml  int_main.toml  int_main_test.toml  int_random_opt.toml  int_scaling_test.toml  interpolation_steps.toml  interpolation_steps_gs.toml  pisinger_main.toml  qpe_main.toml  qpe_main_test.toml  qpe_scaling_test.toml  quad_penalty.toml
fastqaoa/: __init__.py  indicator.py  optimize.py  params.py
notebooks/: Untitled.ipynb  Untitled1.ipynb  ce_penalty.ipynb  circuit_depth_analysis.ipynb  circuit_lengths.py  compare_with_jax_implementation.ipynb  dynamic_rescaling.ipynb  ed_3d_penalty.ipynb  if_example.ipynb  indicator_function.ipynb  int_analysis.ipynb  lbfgs_parameters.feather  lbfgs_parameters.ipynb  metrics_debug.ipynb  optimization_method_test.ipynb  penalty.ipynb  pennylane_test.ipynb  perm_test.ipynb  portfolio_optimization.ipynb  qiskit_circuits.py  qpe_approx_analysis.ipynb  qpe_params_check.ipynb  quad_penalty_test.ipynb  regressor.py  resources.ipynb  resources_qcirc.ipynb  runtime_test.ipynb  showcases.ipynb  tpe_test.ipynb
perf/: qaoa_speed.py
problems/: __init__.py  experiment_runner.py  experiment_runner_eval.py  experiment_structure.py  fine_tune.py  integer_knapsack.py  integer_knapsack_pisinger.py  knapsack.py  pisinger_runner.py  problem.py
results/: int_1.feather  int_1_32.feather  int_1_adm.feather  int_1_gs.feather  int_1_init05.feather  int_1_init1.feather  int_1_initph.feather  int_2.feather  int_2_32.feather  int_2_adm.feather  int_2_gs.feather  int_2_init05.feather  int_2_init1.feather  int_2_initph.feather  int_const.feather  int_const_adm.feather  int_exp.feather  int_exp_32.feather  int_exp_adm.feather  int_exp_gs.feather  int_exp_init05.feather  int_exp_init1.feather  int_exp_initph.feather  int_linear.feather  int_linear005.feather  int_linear02.feather  int_linear05.feather  int_linear1.feather  int_linear_adm.feather  int_linear_old.feather  int_linear_opt.feather  int_main.feather  int_main_a.feather  int_main_test.feather  int_qpfp.feather  int_qpfp_lin.feather  int_quad_penalty.feather  pisinger_main.feather  (+6 more)
src/: frx.c  (+17 more)
(+50 files in other folders)
